--- a/style.css
+++ b/style.css
@@ -57,3 +57,9 @@ main {
 header {
   height: 30vh;
 }
+
+.current-weather {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
