--- a/style.css
+++ b/style.css
@@ -80,3 +80,12 @@ header {
     display: none;
   }
 }
+
+.scroll-to-top {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  visibility: hidden;
+}
